# 3DEngine

./: .gitignore
lib/glad/include/KHR/: khrplatform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shader/: color.fs  shader.fs  shader.vs
scripts/: vertices_loader.py
src/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ObjectBuffer.cpp  ObjectBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  main.cpp  utils.cpp  utils.h
